# rust-scrapper

./: Cargo.toml  ex.json  ex2.json  log.json  test.js
olx-api/: README.md  package.json
olx-api/native/: Cargo.toml
src/: main.rs  olx.rs
src/types/: olx-data.rs  olx-results.rs
