[package]
name = "rust-scrapper"
version = "0.1.0"
authors = ["Davi Suga <daviciencia1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
select = "0.6.0-alpha.1"
futures = "0.3.13"
serde_json = {version = "1.0"}
snailquote = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
pipeline = "0.4.1"
quick-xml = { version = "0.21", features = [ "serialize" ] }
