[package]
name = "olx-api"
version = "0.1.0"
authors = ["Davi William Moraes Suga <daviciencia1@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "olx_api"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.1"

[dependencies]
neon = "0.8.1"
